# =============================================================================
# Sarma Tests
#
# There are three test types: unit tests, program tests, and performance tests
# Unit tests check individual methods and program tests check the program
# with different inputs and ensure correct outputs. Performance tests check
# to make sure the runtime is sufficient given an architecture profile.

# =============================================================================
# Unit Tests
add_subdirectory(unit)

# =============================================================================
# Program Tests
add_subdirectory(system)

# =============================================================================
# Performance Tests

